lustre/utils/obd.c
@@ -1405,8 +1405,7 @@ int jt_obd_md_common(int argc, char **argv, int cmd)
                 struct lu_fid fid = { 0 };
 
 		if (child_base_id != -1)
-			ostid_set_id(&data.ioc_obdo2.o_oi, child_base_id);
-
+			data.ioc_obdo2.o_oi.oi.oi_id = child_base_id;
                 data.ioc_obdo2.o_mode = mode | create_mode;
                 data.ioc_obdo2.o_valid = OBD_MD_FLID | OBD_MD_FLTYPE |
                                          OBD_MD_FLMODE | OBD_MD_FLFLAGS |
